@@ -29,7 +29,8 @@ LazyData: true
 Suggests:
     knitr,
     pander,
-    testthat (>= 0.9.1)
+    testthat (>= 0.9.1),
+    parallel
 NeedsCompilation: no
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
