@@ -4,7 +4,8 @@
 \alias{get_sentiment}
 \title{Get Sentiment Values for a String}
 \usage{
-get_sentiment(char_v, method = "syuzhet", path_to_tagger = NULL)
+get_sentiment(char_v, method = "syuzhet", path_to_tagger = NULL,
+  cl = NULL)
 }
 \arguments{
 \item{char_v}{A vector of strings for evaluation.}
@@ -12,6 +13,8 @@ get_sentiment(char_v, method = "syuzhet", path_to_tagger = NULL)
 \item{method}{A string indicating which sentiment method to use. Options include "syuzhet", "bing", "afinn", "nrc" and "stanford."  See references for more detail on methods.}
 
 \item{path_to_tagger}{local path to location of Stanford CoreNLP package}
+
+\item{cl}{Optional, for parallel sentiment analysis.}
 }
 \value{
 Return value is a numeric vector of sentiment values, one value for each input sentence.
@@ -32,4 +35,3 @@ Manning, Christopher D., Surdeanu, Mihai, Bauer, John, Finkel, Jenny, Bethard, S
 
 Richard Socher, Alex Perelygin, Jean Wu, Jason Chuang, Christopher Manning, Andrew Ng and Christopher Potts.  "Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank Conference on Empirical Methods in Natural Language Processing" (EMNLP 2013).  See: http://nlp.stanford.edu/sentiment/
 }
-
